@@ -9,6 +9,9 @@ TODO:
 
 version 3.03:
 
+	Improvements:
+	- warning in addSubroutine()
+
 version 3.02: Fri 15 Aug 14:52:20 CEST 2025
 
 	Fixes:
